== 0.2.6.13 jbb
* added new api methods
* refactored matchers for new api methods
* added additional tests for stderr and stdout matchers

== Bug fixes
* fixed rspec syntax (no #should != instead must use #should_not ==)
* fixed some documentation errors and omissions

== 0.2.6.12 jbb
* merged aslak 0.2.4
* added remove_env to api
* update api documentation
* revised run steps


== 0.2.6.11 jbb
* administrative fix to gemspec data and dependencies 
* added NO_ARUBA_STEPS env var to not load aruba/cucumber_steps.rb library (exp)

== 0.2.6.10 jbb
* increased default timeout to 20 seconds

== Bug fixes
* fixed implementation of environment variables

== 0.2.6.9 jbb
* added timeout method and basic support step definitions
* somewhat improved api documentation

== 0.2.6.8 jbb
* added some api method documentation

== 0.2.6.7 msassak
* Returned to using Background_Process

=== Bug fixes
* Outputting large amounts of data causes BackgroundProcess to hang

== 0.2.6.6 jbb
* reverted run api method to old implementation and removed background_process

== 0.2.6.5 jbb
* removed lib/aruba-jbb.rb file

== 0.2.6.4 jbb
* Fix for ruby 1.9.2 change in handling StandardError objects as strings

== 0.2.6.3 jbb
* Revised documentation.
* Added aruba-jbb and aruba_jbb library calls
* Minor extension of do have syntax - 'do(?;es)? have'

== 0.2.6.2 jbb
* Merged aslak aruba-0.2.3

== 0.2.6 jbb
* Altered rebase method to handle Ruby 1.9 changes to String class. (JBB)

== 0.2.5 jbb
* Fixed initialization error in aruba_working)dir_init. (JBB)
* Extended cucumber_step matchers for file creation and contents. (JBB)


== 0.2.4 jbb
* Added file should/should not contain:$ step matchers. (JBB)
* Expanded directory and file detection self-test cross-check. (JBB)


== 0.2.4

=== New Features
* Added step definitions for removing files and checking presence of a single file. (Aslak Hellesøy)


== 0.2.3 jbb
* Fixed no directories step error and added scenario to test this


== 0.2.3 aslak
